Added chartjs and renamed some variables. now we have a canvas thing.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div id="chartContainer" style="height: 300px; width: 50%;" class="mobileClass">
   </div>
 
-<div id="weatherContainer"></div>
+<canvas id="canvas"></canvas>
 
 <div id="street-view" height="300px" width="300px"></div>
 
@@ -46,6 +46,7 @@
 <footer>A super-cool and effective tool for finding out if people like trees or cities more.</footer>
   <script src= "jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="canvasjs.min.js"></script>
+  <script type="text/javascript" src="Chart.min.js"></script>
   <script type="text/javascript" src="weatherForcast.js"></script>
 
   <script type="text/javascript" src="googleSnip.js"></script>
