got the highlight feature going

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 <div id="outImgDiv">
   <div id="innerImgDiv">
-     <img id="leftImage" class="mobileClass" >
+     <img id="leftImage"  >
 
-     <img id="rightImage" class="mobileClass">
+     <img id="rightImage" >
 
   </div>
 </div>
